# opengl-tests

./: CMakeLists.txt  README.md
.cache/clangd/index/: ansicolor_sink-inl.h.33281F145ED12C76.idx  ansicolor_sink.h.D6B44CCD424353E7.idx  async.cpp.8BB82C5761D4346D.idx  async.h.B8C1F375B941CCF3.idx  async_logger-inl.h.BEAF3B7AE6127447.idx  async_logger.h.4E4A44CEC3B6A01A.idx  backtracer-inl.h.D3A4F7E44A05788F.idx  backtracer.h.5910C89A5A9C3B05.idx  base_sink-inl.h.C72989ECDAB976BA.idx  base_sink.h.1CF4335ECEC18D4D.idx  basic_file_sink-inl.h.1F285D4EF324C2D8.idx  basic_file_sink.h.C8370EEDA2D474C5.idx  camera.cpp.60B4C3CA976AAE1F.idx  camera.h.888A7E3D324FD1EF.idx  cfg.cpp.212102F432854F5A.idx  circular_q.h.991F3D1047607D05.idx  color_sinks.cpp.E1D26F4555843BD6.idx  common-inl.h.9223A3EDB7AE81A2.idx  common.h.C230815488163ACF.idx  component.cpp.46D904CFC04FBFE2.idx  component.h.A102A3A9125364C2.idx  compute_shader.cpp.1B923F807D3A3EB9.idx  compute_shader.h.49AC2459B6180E90.idx  console_globals.h.A31BA66ED41F79CE.idx  core.h.D2C2AF5BD89CEE2C.idx  cube.cpp.A4974492D1336537.idx  cube.h.5CA48A7300895A42.idx  file_helper.h.D3FC245683CBBE0F.idx  (+68 more)
logs/: 2025-11-25.txt  2025-11-26.txt  2025-11-27.txt
shader/: blur_compute_x.glsl  blur_compute_y.glsl  fragment_shader.glsl  screen_fragment.glsl  screen_vertex.glsl  vertex_shader.glsl
src/: main.cpp  mainwindow.ui  openGlWidget.cpp  openGlWidget.h  quad.h  window.cpp  window.h
src/component/: camera.cpp  camera.h  component.cpp  component.h  cube.cpp  cube.h  drawableComponent.cpp  drawableComponent.h  triangle.cpp  triangle.h
src/gl/: framebuffer.cpp  framebuffer.h  gl_utils.cpp  gl_utils.h  mesh.cpp  mesh.h  texture.cpp  texture.h
src/utils/: logger.cpp  logger.h  textureManager.cpp  textureManager.h
src/widget/: mainwindow.ui  widgetColor.cpp  widgetColor.h  widgetColor.ui
(+6 files in other folders)
